--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,12 @@
 server.port=${PORT:8080}
 
 # ===============================
-# POSTGRES (Render – REQUIRED FORMAT)
+# DATABASE (Render PostgreSQL)
 # ===============================
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=jdbc:postgresql://dpg-d5kvak14tr6s73cqjeug-a/mcqdb_fhio
+spring.datasource.username=mcquser
+spring.datasource.password=X3DVNJUEbOf3vth73TzIr9CMoCT3ODcF
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
