--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,12 @@
 server.port=${PORT:8080}
 
 # ===============================
-# DATABASE (Render PostgreSQL)
+# POSTGRES (Render)
 # ===============================
-spring.datasource.url=jdbc:postgresql://dpg-d5kvak14tr6s73cqjeug-a/mcqdb_fhio
-spring.datasource.username=mcquser
-spring.datasource.password=X3DVNJUEbOf3vth73TzIr9CMoCT3ODcF
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}?sslmode=require
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
